# asammdf

./: .gitmodules  CMakeLists.txt  asammdf.spec  pyproject.toml  tox.ini
.github/workflows/: build.yml  coveralls.yml  main.yml  wheels.yml
asammdf/blocks/: mdf_v4.py  utils.py
benchmarks/: bench.py
src/asammdf/blocks/: cutils.c  zlib_isal.c  zlib_isal.h
